[package]
name = "nono-node"
version = "0.3.0"
edition = "2021"
rust-version = "1.77"
authors = ["Luke Hinds <luke@hinds.email>"]
license = "Apache-2.0"
repository = "https://github.com/always-further/nono"
homepage = "https://github.com/always-further/nono"
description = "Node.js/TypeScript bindings for nono capability-based sandboxing library"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
nono = { path = "../nono/crates/nono" }
napi = { version = "2", default-features = false, features = ["napi9"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
